--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,26 @@ services:
     links:
       - flask-app
 
-      
+  traefik:
+    image: "traefik:v2.5"
+    command:
+      - "--api.insecure=true"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+    ports:
+      - "80:80"
+      - "8080:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
+
+
   flask-app:
     build: ./build/app/
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.app.rule=Host(`localhost`)" 
+      - "traefik.http.services.app.loadbalancer.server.port=5000"
     volumes:
       - ./app:/app
     ports:
@@ -57,7 +74,7 @@ services:
       PMA_HOST: mysql
       PMA_ARBITRARY: 1
     ports:
-      - "8080:80" # Mapea el puerto 8080 para phpMyAdmin
+      - "8085:80" # Mapea el puerto 8080 para phpMyAdmin
     depends_on:
       - mysql
 
