--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,14 +3,14 @@ FROM python:3.9
   
 
 # Establece el directorio de trabajo en /app
-WORKDIR /api
-
-# Copia el archivo de requisitos e instala las dependencias
-COPY requirements.txt .
-RUN pip install -r requirements.txt
+WORKDIR /app
 
 # Copia el contenido de la aplicación en el contenedor
-COPY . .
+COPY . /app
+
+# Copia el archivo de requisitos e instala las dependencias
+RUN pip install -r requirements.txt
+
 
 # Expone el puerto en el que se ejecutará la aplicación Flask
 EXPOSE 5001
