--- a/mensajeria/Dockerfile
+++ b/mensajeria/Dockerfile
@@ -5,15 +5,13 @@ FROM python:3.9
 # Establece el directorio de trabajo en /app
 WORKDIR /app
 
+COPY . /app
+
 # Copia el archivo de requisitos e instala las dependencias
-COPY requirements.txt .
 RUN pip install -r requirements.txt
 
-# Copia el contenido de la aplicación en el contenedor
-COPY . .
-
 # Expone el puerto en el que se ejecutará la aplicación Flask
-EXPOSE 5000
+EXPOSE 5002
 
 # Ejecuta la aplicación Flask
-CMD ["python", "app.py"]
+CMD ["python", "mensajeria.py"]
