--- a/KUBERNETTES/deployment_mensajeria.yaml
+++ b/KUBERNETTES/deployment_mensajeria.yaml
@@ -1,28 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
-
 metadata:
   name: mensajeria-deployment
-
 spec:
-  replicas: 5
+  replicas: 1
   selector:
     matchLabels:
       component: mensajeria
-    template:
-      metadata:
-        labels:
-          component: mensajeria
-      spec:
-        containers:
-        - name: mensajeria-pod
-          image: maits27/budgetbuddy:mensajeria
-          ports:
-          - containerPort: 5002
-          volumeMounts:
-        - name: mensajeria-volume
-          mountPath: /mensajeria
-      volumes:
-      - name: mensajeria-volume
-        hostPath:
-          path: /mensajeria
+  template:
+    metadata:
+      labels:
+        component: mensajeria
+    spec:
+      containers:
+      - name: mensajeria
+        image: maits27/mensajeria
+        ports:
+        - containerPort: 5002
+
+---
+
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: clusterip-mensajeria
+spec:
+  type: ClusterIP
+  selector:
+    component: mensajeria
+  ports:
+  - port: 5002
+    targetPort: 5002
