--- a/KUBERNETTES/deployment_app.yaml
+++ b/KUBERNETTES/deployment_app.yaml
@@ -17,6 +17,11 @@ spec:
         image: maits27/app
         ports:
         - containerPort: 5000
+        env:
+          - name: FLASK_API_HOST
+            value: flask-api
+          - name: MENSAJERIA_HOST
+            value: mensajeria
 
 
 ---
@@ -24,7 +29,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: clusterip-app
+  name: flask-app
 spec:
   type: ClusterIP
   selector:
