--- a/Kubernetes/deployment_bd.yaml
+++ b/Kubernetes/deployment_bd.yaml
@@ -3,8 +3,6 @@ kind: ConfigMap
 metadata:
   name: mysql-configmap
 data:
-  MYSQL_ROOT_PASSWORD: "VoQvmfovsy0hb0CcN5SI"
-  MYSQL_DATABASE: "database"
   INITIAL_DATA.sql: |
     CREATE DATABASE IF NOT EXISTS `database`;
     USE `database`;
@@ -78,3 +76,73 @@ data:
     (6, 'Luz', 'Vivienda', 1, 70, 4),
     (7, 'Ordenador', 'Otros', 1, 700, 5),
     (8, 'Entrada', 'Actividades', 1, 50, 6);
+
+---
+
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: reclamacion-vp
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 2Gi
+
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: mysql-deployment
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      component: mysql
+
+  template:
+    metadata:
+      labels:
+        component: mysql
+
+    spec:
+      containers:
+      - name: mysql
+        image: mysql:latest
+        env:
+        - name: MYSQL_ROOT_PASSWORD
+          value: "VoQvmfovsy0hb0CcN5SI"
+        - name: MYSQL_DATABASE
+          value: "database"
+        ports:
+        - containerPort: 3306
+
+        volumeMounts:
+        - name: mysql-persistent-storage
+          mountPath: /var/lib/mysql
+        - name: initial-data
+          mountPath: /docker-entrypoint-initdb.d
+          
+      volumes:
+      - name: mysql-persistent-storage
+        persistentVolumeClaim:
+          claimName: reclamacion-vp
+      - name: initial-data
+        configMap:
+          name: mysql-configmap
+       
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: mysql
+spec:
+  type: ClusterIP
+  selector:
+    component: mysql
+  ports:
+  - port: 3306
+    targetPort: 3306
